dropbox css fix: overflow scroll, max height 300 px

--- a/analogic/static/assets/skin/css/ks-dropbox.css
+++ b/analogic/static/assets/skin/css/ks-dropbox.css
@@ -62,7 +62,8 @@
 
 .ks-dropbox-panel {
     left: 0;
-    overflow: hidden;
+    overflow: scroll;
+    max-height: 300px;
     position: absolute;
     right: 0;
     top: 100%;
